kubernetes/gateway/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-1
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-1
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: hello-2
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-2
  type: NodePort
