kubernetes/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: gke-l7-rilb
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: example-route
spec:
  parentRefs:
  - name: example-gateway
  rules:
  - matches:
    - path:
        value: /v2
    backendRefs:
    - name: hello-2
      port: 80
  - backendRefs:
    - name: hello-1
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: example-route-hello1
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "hello1.example.com"
  rules:
  - backendRefs:
    - name: hello-1
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: example-route-hello2
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "hello2.example.com"
  rules:
  - backendRefs:
    - name: hello-2
      port: 80
